Details
-
Bug
-
Resolution: Done
-
P2: Important
-
5.9.2, 5.9.7, 5.11.3
-
bb7b87f584128bfa5325921a60e80e3d03f9e194 (qt/qtwebview/5.12)
Description
If the html page contains references with target="_blank", those are ignored or not opened at all. Sample line:
<a href="test.html" target="_blank">test</a>
Attachments
For Gerrit Dashboard: QTBUG-63963 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
248963,2 | iOS: Check if the external browser can open the url first | 5.12 | qt/qtwebview | Status: MERGED | +2 | 0 |