iOS: Check if the external browser can open the url first

If the external browser cannot open the url (as can be the case with
file schemes) then it should fall back to using the same webview instead
so that the link is not ignored.

[ChangeLog][Platform Specific Changes][iOS] Now opens links with _blank
target in the current WebView if the external browser cannot open them.

Fixes: QTBUG-63963
Change-Id: Ibd77c82a084d130e034c4d98ba9b08bb5cdf5743
Reviewed-by: Christian Stromme <christian.stromme@qt.io>